@@ -30,13 +30,14 @@ CD_APPLET_H
 
 
 typedef struct s_terminal {
-  guint16 transparency;
+  guint16  transparency;
   gboolean always_on_top;
   GdkColor backcolor;
   GdkColor forecolor;
 
   GtkWidget *vterm;
   CairoDockDialog *dialog;
+  GtkWidget *tab;
 } t_terminal;
 
 
